add update sub category (sub sub category) route doc
